# MangAdventure

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  app.json  conftest.py  dev-requirements.txt  manage.py  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  -bug--bug-report.md  -question--question.md  -rocket--feature-request.md  -wrench--compatibility.md  bug-report.md  bug-report.yml  bug.md  compatibility.md  config.yml  feature-request.md  feature-request.yml  feature.md  question.md  question.yml
.github/workflows/: deploy.yml  post-release.yml  release.yml  scans.yml  tests.yml
MangAdventure/: __init__.py  __main__.py  bad-bots.txt  bad_bots.py  cache.py  converters.py  fields.py  filters.py  forms.py  jsonld.py  middleware.py  models.py  search.py  settings.py  sitemaps.py  storage.py  urls.py  utils.py  validators.py  views.py  widgets.py  wsgi.py
MangAdventure/modules/: alias.py  sort.py  storage.py  uploaders.py  validators.py
MangAdventure/templates/: contribute.json  error.html  footer.html  image-sitemap.xml  index.html  info.html  layout.html  manifest.webmanifest  opensearch.xml  rapidoc.html  search.html  skeleton.html
MangAdventure/tests/: __init__.py  base.py  settings.py  test_cache.py  test_forms.py  test_middleware.py  test_sitemaps.py  test_storage.py  test_validators.py  test_views.py  utils.py
MangAdventure/utils/: __init__.py  converters.py  filters.py  images.py  random.py  search.py  sort.py  storage.py  uploaders.py  validators.py
api/: __init__.py  apps.py  response.py  urls.py  views.py
api/tests/: __init__.py  conftest.py  test_v1.py  test_v2.py
api/v1/: __init__.py  apps.py  response.py  urls.py  views.py
api/v2/: __init__.py  apps.py  auth.py  mixins.py  negotiation.py  pagination.py  schema.py  urls.py  views.py
config/: __init__.py  admin.py  apps.py  context_processors.py  receivers.py  urls.py
config/management/: __init__.py
config/migrations/: 0001_initial.py  0002_scanlator_permissions.py
config/templatetags/: __init__.py  custom_tags.py  flatpage_tags.py
config/tests/: __init__.py  conftest.py  test_admin.py  test_custom_tags.py  test_fs2import.py  test_tags.py  test_templatetags.py  test_urls.py
docker/: Dockerfile  uwsgi.ini
docs/: .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  ROADMAP.md  changelog.md  changelog.rst  compatibility.md  compatibility.rst  conf.py  index.md  index.rst  install.rst  requirements.txt  roadmap.md  roadmap.rst
docs/_ext/: mangadventure_patches.py
docs/api/: artists.rst  authors.rst  categories.rst  index.rst  releases.rst  series.rst
docs/examples/: apache.conf  nginx.conf
docs/modules/: MangAdventure.rst  MangAdventure.utils.rst  api.rst  api.v1.rst  api.v2.rst  config.management.commands.rst  config.management.rst  config.rst  config.templatetags.rst  groups.rst  groups.templatetags.rst  index.rst  reader.rst  users.rst  users.templatetags.rst
groups/: __init__.py  admin.py  api.py  apps.py  feeds.py  models.py  serializers.py  sitemaps.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0001_squashed.py  0002_irc_reddit.py  0002_managers.py  0003_alter_group_id.py  0003_cdn_storage.py  0004_constraints.py  0004_member_groups.py
groups/templates/: all_groups.html  group.html
groups/templatetags/: __init__.py  group_tags.py
groups/tests/: __init__.py  conftest.py  test_admin.py  test_feeds.py  test_models.py  test_sitemaps.py  test_tags.py  test_views.py
reader/: __init__.py  admin.py  api.py  apps.py  feeds.py  filters.py  models.py  receivers.py  serializers.py  sitemaps.py  urls.py  views.py
reader/fixtures/: categories.xml
reader/migrations/: 0001_initial.py  0001_squashed.py  0002_reader_dates.py  0002_series_created.py  0002_squashed_edits.py  0003_chapter_group.py  (+20 more)
scripts/: deploy.sh  lint.sh
settings/: __init__.py  apps.py  context_processors.py
templates/: error.html  index.html  info.html  search.html  skeleton.html
users/: __init__.py  adapters.py  admin.py  api.py  apps.py  backends.py  feeds.py  forms.py  models.py  receivers.py  serializers.py  tokens.py  urls.py  utils.py  views.py  widgets.py
(+155 files in other folders)
